meridian/prod/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: meridian-db
  namespace: meridian-prod
spec:
  selector:
    app: meridian-db
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: meridian-db
  namespace: meridian-prod
spec:
  serviceName: meridian-db
  replicas: 1
  selector:
    matchLabels:
      app: meridian-db
      tier: data
  template:
    metadata:
      labels:
        app: meridian-db
        tier: data
    spec:
      serviceAccountName: meridian-app
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: postgres
        image: docker.io/library/postgres:16-alpine
        ports:
        - containerPort: 5432
        securityContext:
          runAsNonRoot: true
          runAsUser: 70
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        emptyDir: {}
